RESOLVED FIXED218293
AX: Incorrect list of voices being displayed on iOS
https://bugs.webkit.org/show_bug.cgi?id=218293
Summary AX: Incorrect list of voices being displayed on iOS
chris fleizach
Reported 2020-10-28 10:45:06 PDT
For WebSpeech, we want WebKit to only show built-in system voices. <rdar://problem/70741038>
Attachments
patch (8.54 KB, patch)
2020-10-28 10:47 PDT, chris fleizach
ews-feeder: commit-queue-
patch (8.57 KB, patch)
2020-10-28 11:06 PDT, chris fleizach
ews-feeder: commit-queue-
patch (8.60 KB, patch)
2020-10-28 11:51 PDT, chris fleizach
ews-feeder: commit-queue-
patch (9.21 KB, patch)
2020-10-28 13:09 PDT, chris fleizach
no flags
patch (9.17 KB, patch)
2020-10-28 13:27 PDT, chris fleizach
no flags
patch (9.19 KB, patch)
2020-10-28 17:22 PDT, chris fleizach
no flags
patch (8.42 KB, patch)
2020-10-29 10:17 PDT, chris fleizach
no flags
patch (9.72 KB, patch)
2020-10-29 14:26 PDT, chris fleizach
pvollan: review+
patch (9.68 KB, patch)
2020-10-30 11:25 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2020-10-28 10:47:24 PDT
chris fleizach
Comment 2 2020-10-28 11:06:17 PDT
chris fleizach
Comment 3 2020-10-28 11:51:55 PDT
chris fleizach
Comment 4 2020-10-28 13:09:30 PDT
chris fleizach
Comment 5 2020-10-28 13:27:10 PDT
chris fleizach
Comment 6 2020-10-28 17:22:22 PDT
chris fleizach
Comment 7 2020-10-29 10:17:04 PDT
chris fleizach
Comment 8 2020-10-29 14:26:22 PDT
Per Arne Vollan
Comment 9 2020-10-30 11:22:28 PDT
Comment on attachment 412687 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=412687&action=review R=me. > Source/WebCore/PAL/pal/spi/cocoa/AXSpeechManagerSPI.h:38 > +WTF_EXTERN_C_BEGIN I don't think this is needed when you're declaring an interface.
chris fleizach
Comment 10 2020-10-30 11:25:43 PDT
Created attachment 412779 [details] patch addressed review comments
EWS
Comment 11 2020-10-30 15:59:15 PDT
Committed r269208: <https://trac.webkit.org/changeset/269208> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412779 [details].
Note You need to log in before you can comment on or make changes to this bug.